--- a/.github/workflows/docker-tempo.yml
+++ b/.github/workflows/docker-tempo.yml
@@ -13,15 +13,12 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    # 登录 Docker Hub (如果需要推送镜像)
     - name: Log in to Docker Hub
-      run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-    # 构建 Docker 镜像
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag youtaqiu/tempo:latest
+      run: docker build . --file Dockerfile --tag ghcr.io/${{ github.actor }}/tempo:latest
       working-directory: ./tempo
       
-    # 推送 Docker 镜像到 Docker Hub (如果需要)
     - name: Push Docker image
-      run: docker push youtaqiu/tempo:latest
+      run: docker push ghcr.io/${{ github.actor }}/tempo:latest
