--- a/loki/loki-config.yaml.template
+++ b/loki/loki-config.yaml.template
@@ -7,12 +7,12 @@ server:
 
 storage_config:
   aws:
-    bucketnames: ${S3_BUCKET}
-    endpoint: ${S3_ENDPOINT}
-    region: ${S3_REGION}
-    access_key_id: ${S3_ACCESS_KEY}
-    secret_access_key: ${S3_SECRET_KEY}
-    insecure: false
+    bucketnames: {{ getenv "S3_BUCKET" "loki-data" }}
+    endpoint: {{ getenv "S3_ENDPOINT" "default_endpoint" }}
+    region: {{ getenv "S3_REGION" "auto" }}
+    access_key_id: {{ getenv "S3_ACCESS_KEY" "default_access_key" }}
+    secret_access_key: {{ getenv "S3_SECRET_KEY" "default_secret_key" }}
+    insecure: {{ getenv "S3_INSECURE" "false" }}
     http_config:
       idle_conn_timeout: 90s
       response_header_timeout: 0s
