--- a/.github/workflows/docker-prometheus.yml
+++ b/.github/workflows/docker-prometheus.yml
@@ -5,6 +5,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  schedule:
+    - cron: "0 2 * * *"  # 每天凌晨2点触发任务
 
 jobs:
   build:
@@ -14,11 +16,17 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+    - name: Log in to GitHub Container Registry
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ghcr.io/${{ github.actor }}/prometheus:latest
+      run: docker build . --file Dockerfile --tag ghcr.io/${{ github.actor }}/prometheus:latest --tag ${{ secrets.DOCKER_USERNAME }}/prometheus:latest
       working-directory: ./prometheus
       
-    - name: Push Docker image
+    - name: Push Docker image to GitHub Container Registry
       run: docker push ghcr.io/${{ github.actor }}/prometheus:latest
+
+    - name: Push Docker image to Docker Hub
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/prometheus:latest
