--- a/.github/workflows/docker-pyroscope.yml
+++ b/.github/workflows/docker-pyroscope.yml
@@ -1,4 +1,4 @@
-name: Build Grafana Docker Image
+name: Build Loki Docker Image
 
 on:
   push:
@@ -22,11 +22,11 @@ jobs:
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ghcr.io/${{ github.actor }}/grafana:latest --tag ${{ secrets.DOCKER_USERNAME }}/grafana:latest
-      working-directory: ./grafana
-      
-    - name: Push Docker image to GitHub Container Registry
-      run: docker push ghcr.io/${{ github.actor }}/grafana:latest
+      run: docker build . --file Dockerfile --tag ghcr.io/${{ github.actor }}/pyroscope:latest --tag ${{ secrets.DOCKER_USERNAME }}/pyroscope:latest
+      working-directory: ./pyroscope
 
     - name: Push Docker image to Docker Hub
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/grafana:latest
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/pyroscope:latest
+
+    - name: Push Docker image to GitHub Container Registry
+      run: docker push ghcr.io/${{ github.actor }}/pyroscope:latest
