--- a/.github/workflows/docker-tempo.yml
+++ b/.github/workflows/docker-tempo.yml
@@ -5,6 +5,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  schedule:
+    - cron: "0 2 * * *"  # 每天凌晨2点触发任务
 
 jobs:
   build:
@@ -14,6 +16,9 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+    - name: Log in to GitHub Container Registry
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
     - name: Build the Docker image
